# tundraplot

./: .gitignore  Cargo.toml
src/: egui_app.rs  main.rs  socks.rs
src/dtypes/: dataframes.rs
src/utils/: parser.rs
